# Rocket-Software

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.py  codecov.yml  requirements.txt  rocket_software.cmake  st_nucleo_f4.cfg
Arek/: APRS_FIRMWARE — ALL_PINS.ioc  APRS_FIRMWARE.ioc  CMakeLists.txt
Arek/Inc/: afsk.h  aprs.h  ax25.h  config.h  gps.h  main.h  si446x.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uart_debug.h
Arek/Src/: SS_platform.c  afsk.c  aprs.c  ax25.c  gpio.c  gps.c  main.c  si446x.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  uart_debug.c  usart.c
Bolek/: Bolek.ioc  Bolek2.ioc  CMakeLists.txt  STM32F446VETx_FLASH.ld
Bolek/Inc/: SS_platform.h  i2c.h  main.h  quadspi.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usb_otg.h  usbd_conf.h
Bolek/Src/: SS_platform.c  adc.c  dma.c  gpio.c  i2c.c  main.c  quadspi.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c  usb_otg.c  usbd_conf.c
Czapla/: CMakeLists.txt  Czapla.ioc
Czapla/Inc/: SS_platform.h  can.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Czapla/Src/: SS_platform.c  SS_platform.h  can.c  crc.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/: CMakeLists.txt  mock_drivers.rb  stm32f4xx_hal_conf.h
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  README.md  application.c  cmock_config.yaml  mockFreeRTOS.rb
FreeRTOS/Source/: queue.c  tasks.c
FreeRTOS/TraceRecorder/: CMakeLists.txt  tracealyzer_readme.txt  trcKernelPort.c  trcSnapshotRecorder.c  trcStreamingRecorder.c
FreeRTOS/mocks/: MockFreeRTOS.c  MockFreeRTOS.h  MockStackMacros.c  MockStackMacros.h  Mockcroutine.c  Mockcroutine.h  Mockdeprecated_definitions.c  Mockdeprecated_definitions.h  Mockevent_groups.c  Mockevent_groups.h  Mocklist.c  Mocklist.h  Mockmessage_buffer.c  Mockmessage_buffer.h  Mockprojdefs.c  Mockprojdefs.h  Mockqueue.c  Mockqueue.h  Mocksemphr.c  Mocksemphr.h  Mockstack_macros.c  Mockstack_macros.h  Mockstream_buffer.c  Mockstream_buffer.h  Mocktask.c  Mocktask.h  Mocktimers.c  Mocktimers.h  portmacro.h
Kromek/: .cproject  CMakeLists.txt  Kromek.ioc  commands.jlink  simulate.py  test.py
Kromek/Inc/: SS_Kromek_init.h  SS_platform.h  SS_platform_init.h  adc.h  can.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usbd_conf.h
Kromek/Src/: SS_Kromek_init.c  SS_platform.c  SS_platform_init.c  adc.c  can.c  crc.c  dma.c  gpio.c  i2c.c  main.c  quadspi.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c  usbd_conf.c  usbd_desc.c  usbd_storage_if.c
Kromek/Test/: SS_Kromek_tests.c
Radeks_Tester/: CMakeLists.txt  Radeks_Tester.ioc  STM32F446RCTx_FLASH.ld
Radeks_Tester/Inc/: CircularBuffer.h  SS_receivedSimBinaryDataDecoder.h  SS_tester.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_conf.h
Radeks_Tester/Src/: CircularBuffer.c  SS_platform.c  SS_receivedSimBinaryDataDecoder.c  SS_tester.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
SS-common/: CMakeLists.txt  SS_FreeRTOS.c  SS_common.c  SS_common.h  SS_init.c  SS_init.h
SS-common/ADS1258/: CMakeLists.txt  SS_ADS1258.c  SS_ADS1258.h  SS_ADS1258_unit_tests.c  SS_ADS1258_unit_tests.h  SS_measurements.c  SS_measurements.h  SS_measurements_tests.c
SS-common/FreeRTOS/: CMakeLists.txt  SS_FreeRTOS.c  SS_FreeRTOS.h
SS-common/JSON-settings/: .gitingore  CMakeLists.txt  SS_json_parser.c  SS_json_parser.h  SS_settings.c  SS_settings.h  settings.json  settings_json.c  settings_json.h
SS-common/LoRa/: CMakeLists.txt  SS_rfm23.c  SS_rfm23.h
SS-common/MLX90393/: CMakeLists.txt  SS_MLX90393.c  SS_MLX90393.h  SS_MLX90393_test.c  magneto_data_logger.py
SS-common/MPU9250/: CMakeLists.txt  SS_AK8963.c  SS_AK8963.h  SS_AK8963_tests.c  SS_MPU9250.c  SS_MPU9250.h  SS_MPU9250_tests.c
SS-common/MS5X/: CMakeLists.txt  SS_MS5X.c  SS_MS5X.h
SS-common/S25FL/: CMakeLists.txt  SS_S25FL.c  SS_S25FL.h  SS_flash_ctrl.c  SS_flash_ctrl.h  SS_s25fl.c  SS_s25fl.h  test.c  test.h  test_flash_ctrl.c  test_s25fl.c
SS-common/SCD30/: CMakeLists.txt  SS_SCD30.c  SS_SCD30.h  sensirion_common.c  sensirion_hw_i2c_implementation.c
SS-common/adc/: CMakeLists.txt  SS_Kromek_adc.c  SS_Kromek_adc.h  SS_adc.c  SS_adc.h
SS-common/callbacks/: CMakeLists.txt  SS_it.c  SS_it.h
SS-common/can/: CMakeLists.txt  SS_can.c  SS_can.h  SS_can_tests.c
SS-common/com/: CMakeLists.txt  SS_com.c  SS_com.h  SS_com_debug.c  SS_com_debug.h  SS_com_feed.c  SS_com_feed.h  SS_com_handlers.h  SS_com_ids.h  SS_com_protocol.c  SS_com_protocol.h  SS_com_tests.c
SS-common/console/: CMakeLists.txt  SS_console.c  SS_console.h
SS-common/dynamixel/: CMakeLists.txt  SS_dynamixel.c  SS_dynamixel.h  SS_dynamixel_com.c  SS_dynamixel_com.h  SS_dynamixel_tests.c
SS-common/error/: CMakeLists.txt  SS_error.c  SS_error.h
SS-common/fatmap/: CMakeLists.txt  SS_fatmap.c  SS_fatmap.h  SS_fatmap_defs.h
SS-common/fifo/: CMakeLists.txt  SS_fifo.c  SS_fifo.h  SS_fifo_tests.c
SS-common/flash/: CMakeLists.txt  SS_flash.c  SS_flash.h  SS_flash_caching.c  SS_flash_caching.h  SS_flash_caching_tests.c  SS_flash_com.c  SS_flash_com.h  SS_flash_ctrl.c  SS_flash_ctrl.h  SS_flash_ctrl_tests.c  SS_flash_lfs.c  SS_flash_lfs.h  SS_flash_log.c  SS_flash_log.h  SS_flash_log_tests.c  SS_s25fl.c  SS_s25fl.h  SS_s25fl_tests.c
SS-common/grazyna/: CMakeLists.txt  SS_Grazyna.h  SS_Grazyna_com.h  SS_grazyna.c  SS_grazyna.h  SS_grazyna_com.c  SS_grazyna_hal.c  SS_grazyna_hal.h  SS_grazyna_tests.c  SS_grazyna_tests_hal.c  main.c
SS-common/igniter/: CMakeLists.txt  SS_igniter.c  SS_igniter.h  SS_igniter_com.c  SS_igniter_com.h
SS-common/json-settings/: CMakeLists.txt  SS_json_parser.c  SS_settings.c  json_to_array.sh
SS-common/log/: CMakeLists.txt  SS_log.c  SS_log.h  printf.c  printf.h
SS-common/magneto/: CMakeLists.txt  (+5 more)
SS-test/: CMakeLists.txt  cmock_config.yaml  run_tests.sh
Staszek/: CMakeLists.txt  STM32F446VETx_FLASH.ld  Staszek.ioc
(+242 files in other folders)
